# rtiaw-futhark

./: .gitignore  Cargo.toml  Makefile  build.rs  flake.nix  shell.nix
src/: colour.fut  fut.rs  interval.fut  lib.fut  main.rs  option.fut  random.fut  raytracing.fut  scenes.fut  tuple.fut  vector.fut
