[package]
name = "rust-futhark-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"

[build-dependencies]
futhark-bindgen = { version = "0.2.5", default-features = false, features = ["build"] }
