[package]
name = "rust-futhark-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
bytemuck_derive = "1.5.0"

[build-dependencies]
futhark-bindgen = { git = "https://github.com/SKyletoft/futhark-bindgen.git", default-features = false, features = ["build"] }
